Implementación completa de ServicioValidacionPorRonda + tests unitarios exitosos